--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "body-parser": "^1.15.2",
     "clarify": "^2.0.0",
     "compression": "^1.6.2",
+    "dotenv": "^2.0.0",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "express-ejs-layouts": "^2.2.0",
