--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha test",
-    "start": "node server.js",
-    "start-dev": "nodemon server.js",
+    "start": "nf start",
+    "start-dev": "nf run nodemon server.js",
     "build": "browserify -t partialify ./public/js/app.js -o ./public/js/main.js",
     "watch": "watchify -t partialify ./public/js/app.js -o ./public/js/main.js -dv"
   },
@@ -42,10 +42,10 @@
     "body-parser": "^1.15.2",
     "clarify": "^2.0.0",
     "compression": "^1.6.2",
-    "dotenv": "^2.0.0",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "express-ejs-layouts": "^2.2.0",
+    "foreman": "1.4.1",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
@@ -53,7 +53,6 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "superagent": "^2.2.0",
     "twilio": "^2.9.2",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3",
