--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^4.14.0",
     "express-ejs-layouts": "^2.2.0",
     "foreman": "1.4.1",
+    "jquery": "^3.1.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
