--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "foreman": "1.4.1",
     "jquery": "^3.1.0",
     "jsonwebtoken": "^7.1.9",
+    "moment": "^2.14.1",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
     "nodemailer": "^2.5.0",
